force-app/main/default/objects/Customer_Service_Data_Collection__c/Customer_Service_Data_Collection__c.object-meta.xml
<CustomObject>
    <label>Customer Service Data Collection</label>
    <nameField>
        <displayFormat>E-CUS-{0000}</displayFormat>
        <label>Customer Service Data Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Service Data Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>