force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to capture the Account Owner; utilised for automated email for the &apos;Customer Service Data Collections&apos; report</description>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service_Data_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>