force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Affected_cavities__c.field-meta.xml
<CustomField>
    <fullName>Affected_cavities__c</fullName>
    <label>Affected cavities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>