force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Affected_QTY__c.field-meta.xml
<CustomField>
    <fullName>Affected_QTY__c</fullName>
    <label>Affected Qty (Pallets)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>