force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Affected_QTY_pounds__c.field-meta.xml
<CustomField>
    <fullName>Affected_QTY_pounds__c</fullName>
    <label>Affected QTY (£ / €)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>