force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Batch_number__c.field-meta.xml
<CustomField>
    <fullName>Batch_number__c</fullName>
    <label>Batch/Lot number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>