force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Charges_of_future_risk__c.field-meta.xml
<CustomField>
    <fullName>Charges_of_future_risk__c</fullName>
    <label>Charges of future risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>