force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Container_Name__c.field-meta.xml
<CustomField>
    <fullName>Container_Name__c</fullName>
    <label>Container Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>