force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/CTS_Hypothesis__c.field-meta.xml
<CustomField>
    <fullName>CTS_Hypothesis__c</fullName>
    <label>CTS Hypothesis (optional)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>