force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Service Data Collections</relationshipLabel>
    <relationshipName>Customer_Service_Data_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>