force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Customer_NCR_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_NCR_Code__c</fullName>
    <label>Customer NCR Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>