force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Customer_Services_Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Customer_Services_Visit_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Services Visit Report</label>
    <referenceTo>Customer_Services_Visit_Report__c</referenceTo>
    <relationshipLabel>Customer Service Data Collections</relationshipLabel>
    <relationshipName>Customer_Service_Data_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>