force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Detection_point__c.field-meta.xml
<CustomField>
    <fullName>Detection_point__c</fullName>
    <label>Detection point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>