force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/DOM__c.field-meta.xml
<CustomField>
    <fullName>DOM__c</fullName>
    <label>DOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>