force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Filling_line__c.field-meta.xml
<CustomField>
    <fullName>Filling_line__c</fullName>
    <label>Filling line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>