force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Filling_site__c.field-meta.xml
<CustomField>
    <fullName>Filling_site__c</fullName>
    <label>Filling site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>