force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Finished_products_affected__c.field-meta.xml
<CustomField>
    <fullName>Finished_products_affected__c</fullName>
    <label>Finished products affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>