force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Global_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Global_Categorization__c</fullName>
    <label>Global Categorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>