force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Impact_for_customer__c.field-meta.xml
<CustomField>
    <fullName>Impact_for_customer__c</fullName>
    <label>Impact for customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Imagefood</fullName>
            </value>
            <value>
                <fullName>Safety/Defense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>