force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Incident_classification_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Incident_classification_for_Customer__c</fullName>
    <label>Incident classification for Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High (Risk of losing sales)</fullName>
            </value>
            <value>
                <fullName>Medium (Impacts ENCIRC&apos;s reputation)</fullName>
            </value>
            <value>
                <fullName>Low (Doesn&apos;t impacts ENCIRC&apos;s reputation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>