force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Model_Material_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Material_Id__c</fullName>
    <formula>Model_Material_Name__r.Bottle_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model &amp; Material Number</label>
    <type>Text</type>
</CustomField>