force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Model_Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Material_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model &amp; Material Name</label>
    <referenceTo>Bottle__c</referenceTo>
    <relationshipLabel>Customer Service Data Collections</relationshipLabel>
    <relationshipName>Customer_Service_Data_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>