force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>