force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Defective quantity / Breakage rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>