force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Reception_date__c.field-meta.xml
<CustomField>
    <fullName>Reception_date__c</fullName>
    <label>Reception date</label>
    <type>Date</type>
</CustomField>