force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Report_complete__c.field-meta.xml
<CustomField>
    <fullName>Report_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report complete</label>
    <type>Checkbox</type>
</CustomField>