force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Return_needed__c.field-meta.xml
<CustomField>
    <fullName>Return_needed__c</fullName>
    <label>Return needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>