force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For email alert</description>
    <label>Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service_Data_Collections3</relationshipName>
    <type>Lookup</type>
</CustomField>