force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Sampling_Image__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Image__c</fullName>
    <label>Supporting Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>