force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Sampling_Pictures__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Pictures__c</fullName>
    <label>Sampling / Pictures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>