force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Scope_of_incident__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_incident__c</fullName>
    <label>Scope of incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Final Customer</fullName>
            </value>
            <value>
                <fullName>Processing Line</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>