force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Senior_Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sales_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For email alert</description>
    <label>Senior Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Service_Data_Collections2</relationshipName>
    <type>Lookup</type>
</CustomField>