force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Supporting_Information__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Information__c</fullName>
    <description>Updates via wf for email alert</description>
    <label>Supporting Information</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>