force-app/main/default/objects/Customer_Service_Data_Collection__c/fields/Works_order_number__c.field-meta.xml
<CustomField>
    <fullName>Works_order_number__c</fullName>
    <label>Works order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>