force-app/main/default/objects/Customer_Service_Data_Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer__c</columns>
    <columns>Reception_date__c</columns>
    <columns>Container_Name__c</columns>
    <columns>Customer_NCR_Code__c</columns>
    <columns>Plant__c</columns>
    <columns>Affected_QTY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>